--- a/navi.html
+++ b/navi.html
@@ -2,3 +2,11 @@
   <h1>navi</h1>
   </center>
   <hr>
+
+  <p>
+Venkatesh Prabhu Kasthuri Raja (born 28 July 1983),[2] known professionally as Dhanush, is an Indian actor, filmmaker, lyricist and playback singer who primarily works in Tamil cinema, besides a few Hindi and Telugu films.[3][4] Having starred in 50 films over his career, his accolades include four National Film Awards (two as actor and two as producer), fourteen SIIMA Awards, eight Filmfare Awards South and a Filmfare Award.[5] One of the highest paid actors in Tamil cinema, he has been included in the Forbes India Celebrity 100 list six times.[6]
+
+Dhanush's first film was Thulluvadho Ilamai, a 2002 coming-of-age film directed by his father, Kasthuri Raja. He achieved further success in Polladhavan (2007) and Yaaradi Nee Mohini (2008), both of which were critically acclaimed and commercially successful.[7] His role as a rooster fight jockey in Aadukalam (2010) won him the National Film Award for Best Actor and the Filmfare Award for Best Actor – Tamil.[8] He continued success with films, including Maryan (2013), Velaiilla Pattadhari (2014), Anegan (2015), Maari (2015), Kodi (2016), Vada Chennai (2018), Asuran (2019), Thiruchitrambalam (2022), Vaathi (2023) and Raayan (2024), the lattermost of which emerged as his highest-grossing release.[9]
+
+
+  </p>
